# year2lab1

./: Board.cpp  Board.h  CMakeLists.txt  RandomCell.cpp  RandomCell.h  Statistics.cpp  Statistics.h  experiment.cpp  experiment.h  main.cpp  student1_demo.cpp
